[package]
name = "four-fours-core"
version = "0.1.0"
authors = ["Kevin Guthrie <kevin.guthrie@gmail.com>"]
#build = "build/build.rs"

[dependencies]
parallel-event-emitter = "0.2.4"
futures = "0.1.25"
rayon = "1.0.3"
crossbeam-channel = "0.3.6"
trace-error = "0.1.5"
lazy_static = "1.2.0"
log = "0.4"
simplelog = "0.5.3"
itertools = "0.8.0"
getset = "0.0.6"
derive_builder = "0.7.0"
nom = "4.1.1"
rex = { path = "../external-crates/rex" }
statrs = "0.10.0"
num = "0.2.0"
cached = "0.8.0"

[build-dependencies]
cbindgen = "0.6.8"
regex = "1.1.0"
lazy_static = "1.2.0"
handlebars = "1.1.0"
serde = "1.0.85"
serde_json = "1.0.36"
heck = "0.3.1"
derive_builder = "0.7.0"
itertools = "0.8.0"
log = "0.4"
simplelog = "0.5.3"

[lib]
name = "fourfours"
path = "src/lib.rs"
crate-type = ["staticlib"]

